Alterações gerais no App

--- a/app/src/main/res/layout/activity_nova_viagem.xml
+++ b/app/src/main/res/layout/activity_nova_viagem.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorGrayLightBackground"
-    tools:context="amztrip.cursoandroid.com.amztrip.ViagemActivity">
+    tools:context="amztrip.cursoandroid.com.amztrip.ui.ViagemActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
