--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -8,13 +8,13 @@
     android:background="#273b7a">
 
     <TextView
-        android:id="@+id/novo_Custo"
+        android:id="@+id/gastos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="49dp"
         android:layout_marginTop="100dp"
         android:textAlignment="center"
-        android:text="Novo custo"
+        android:text="Veja seus gastos"
         android:textColor="#ffffff"
         android:drawableTop="@drawable/novo_custo"
         android:clickable="true"
@@ -23,50 +23,5 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="49dp" />
-
-    <TextView
-        android:id="@+id/nova_viagem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/novo_Custo"
-        android:layout_marginRight="50dp"
-        android:drawableTop="@drawable/nova_viagem"
-        android:textAlignment="center"
-        android:text="Nova Viagem"
-        android:textColor="#ffffff"
-        android:clickable="true"
-        android:onClick="selecionarOpcao" />
-
-    <TextView
-        android:id="@+id/minhas_viagens"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@id/novo_Custo"
-        android:layout_marginBottom="120dp"
-        android:drawableTop="@drawable/minhas_viagens"
-        android:text="Minhas Viagens"
-        android:textColor="#ffffff"
-        android:textAlignment="center"
-        android:clickable="true"
-        android:onClick="selecionarOpcao"
-        />
-
-    <TextView
-        android:id="@+id/configuracoes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@id/nova_viagem"
-        android:layout_alignBottom="@id/minhas_viagens"
-        android:drawableTop="@drawable/minhas_configuracoes"
-        android:text="Configurações"
-        android:textAlignment="center"
-        android:textColor="#ffffff"
-        android:clickable="true"
-        android:onClick="selecionarOpcao"
-        />
-
-
 
 </RelativeLayout>
