--- a/app/src/main/res/layout/activity_gasto.xml
+++ b/app/src/main/res/layout/activity_gasto.xml
@@ -91,7 +91,7 @@
 
 
         <Button
-            android:id="@+id/data"
+            android:id="@+id/btn_data"
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_default"
             android:layout_marginLeft="@dimen/margin_default"
@@ -169,6 +169,7 @@
 
 
         <Button
+            android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_big"
             android:layout_marginBottom="@dimen/margin_min_default"
