--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -3,45 +3,45 @@
 <LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:theme="@style/LoginTheme"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_password_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e03a00"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="amztrip.cursoandroid.com.amztrip.LoginPasswordActivity"
-    android:orientation="vertical"
-    android:background="#e03a00">
+    app:theme="@style/LoginTheme"
+    tools:context="amztrip.cursoandroid.com.amztrip.ui.LoginPasswordActivity">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:src="@drawable/logo_fundo_escuro"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        />
+        android:src="@drawable/logo_fundo_escuro" />
 
     <TextView
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#ffffff"
-        android:text="Senha"/>
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="40dp"
+        android:text="Senha"
+        android:textColor="#ffffff" />
 
     <EditText
         android:id="@+id/edt_password"
-        android:layout_marginTop="10dp"
-        android:paddingLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#000000"
+        android:layout_marginTop="10dp"
         android:alpha="0.23"
+        android:background="#000000"
+        android:inputType="textPassword"
+        android:paddingLeft="10dp"
         android:textColor="#ffffff">
 
         <requestFocus />
@@ -49,15 +49,14 @@
     </EditText>
 
     <Button
-        android:id="@+id/btn_next_dois"
+        android:id="@+id/btn_next_senha"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="#940030"
-        android:textColor="#ffffff"
         android:text="Próximo"
         android:textAlignment="center"
-        />
+        android:textColor="#ffffff" />
 
 
 </LinearLayout>
