--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -3,7 +3,7 @@
 <LinearLayout
 
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".LoginUserActivity"
+    tools:context=".ui.LoginUserActivity"
     xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="match_parent"
@@ -55,11 +55,5 @@
         android:text="Próximo"
         android:textAlignment="center"
         />
-
-    <CheckBox
-        android:id="@+id/manterConectado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/manter_conectado" />
 
 </LinearLayout>
