--- a/app/src/main/res/layout/activity_gasto_list.xml
+++ b/app/src/main/res/layout/activity_gasto_list.xml
@@ -8,15 +8,21 @@
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/margin_small">
 
     </ListView>
 
     <Button
         android:id="@+id/btn_novo_gasto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/size_60"
+        android:textColor="@color/colorWhite"
+        android:background="@color/colorPrimary"
+        android:text="ADICIONE UM NOVO GASTO"
         android:layout_alignParentBottom="true"
-        android:text="ADICIONE UM LNOVO GASTO" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
