--- a/app/src/main/res/layout/item_gasto_list.xml
+++ b/app/src/main/res/layout/item_gasto_list.xml
@@ -9,6 +9,7 @@
         android:id="@+id/item_categoria"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/text_size_default"
         android:layout_marginTop="@dimen/margin_mid"
         android:layout_weight="1"
         android:text="Categoria" />
@@ -17,7 +18,6 @@
         android:id="@+id/item_valor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_mid"
         android:layout_weight="1"
         android:text="Valor" />
 
