--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorBlue">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
     <!-- Colours Palette -->
-    <color name="colorGreenNewTrip">#01e9ac</color>
+    <color name="colorPrimary">#01e9ac</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrayLightBackground">#f2f2f2</color>
     <color name="colorGrayMidBackground">#e1e1e1</color>
