--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,11 +3,14 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <!-- Sizes -->
+    <!-- Text Sizes -->
     <dimen name="text_size_title">40sp</dimen>
+    <dimen name="text_size_medium">30sp</dimen>
+    <dimen name="text_size_default">20sp</dimen>
 
     <!-- Sizes -->
     <dimen name="size_big">200dp</dimen>
+    <dimen name="size_60">60dp</dimen>
     <dimen name="size_default">45dp</dimen>
 
     <!-- Margin Sizes -->
